editor-components/about/about15/about15.module.scss
@use "../../../composer-base-components/base/utitilities/viewports.module.scss" as *;

.container {
    &.has-background {
        .max-content {
            padding: var(--composer-gap-xl) var(--composer-gap-lg);
            background-color: var(--composer-primary-color);
            border-radius: var(--composer-border-radius-md);
            box-shadow: var(--box-shadow-active);

            .wrapper {
                .vertical-content {

                    .subtitle {
                        color: var(--composer-font-color-secondary);
                        background: transparent;
                        padding: 0;

                        &::before {
                            background: var(--composer-font-color-secondary);
                        }
                    }

                    .title,
                    .description {
                        color: var(--composer-font-color-secondary);
                    }
                }
            }
        }
    }

    .max-content {
        .wrapper {
            display: flex;
            gap: var(--composer-gap-md);

            .vertical-content {
                width: 40%;
                justify-content: center;
                align-items: flex-start !important;

                &.full-width {
                    width: 100%;
                    display: block;
                    text-align: var(--composer-content-alignment);

                    .subtitle {
                        display: block;
                        width: fit-content;
                        margin-left: 0 !important;
                        text-align: left !important;
                    }

                    .title,
                    .description {
                        text-align: inherit;
                    }

                    .button-container {
                        display: flex;
                        justify-content: var(--composer-content-alignment);
                    }
                }

                .subtitle {
                    margin-left: 0 !important;
                    margin-right: 0 !important;
                    text-align: left !important;
                }

                .title,
                .description {
                    text-align: left;
                }

                .button-container {
                    justify-content: flex-start;
                    gap: var(--composer-gap-sm);
                    flex-wrap: wrap;
                    flex-direction: row;

                    .button {

                        .button-icon,
                        .button-text {
                            content: "";
                        }
                    }
                }
            }

            .media-content {
                flex: 1;
                min-width: 0;
                display: flex;
                flex-direction: column;

                .media-wrapper {
                    display: flex;
                    gap: var(--composer-gap-md);
                    flex: 1;

                    .media-box {
                        flex: 1;
                        position: relative;
                        overflow: hidden;
                        border-radius: var(--composer-border-radius-sm);
                        min-height: 500px;

                        .media-item {
                            width: 100%;
                            height: 100%;
                            object-fit: cover;
                            display: block;
                        }

                        .overlay {
                            position: absolute;
                            inset: 0;
                            border-radius: inherit;
                            background-color: var(--composer-overlay-color);
                            pointer-events: none;
                            z-index: 1;
                        }
                    }
                }
            }
        }
    }
}


@container (max-width: #{$composer-tablet-width}) {
    .container {
        &.has-background {
            .max-content {
                padding: var(--composer-gap-xl) var(--composer-gap-md);
            }
        }
    }
}

@container (max-width: #{$composer-phone-width}) {
    .container {
        &.has-background {
            .max-content {
                padding: var(--composer-gap-lg) var(--composer-gap-md);
            }
        }

        .max-content {
            .wrapper {
                gap: var(--composer-gap-md);
                flex-direction: column;

                .vertical-content {
                    width: 100%;
                    text-align: var(--composer-content-alignment);
                    display: block !important;
                    align-items: unset !important;

                    .subtitle {
                        margin-left: unset !important;
                        text-align: unset !important;
                        width: auto;
                        display: inline-block;
                        max-width: 100%;
                    }

                    .title,
                    .description {
                        text-align: inherit;
                    }

                    .button-container {
                        justify-content: var(--composer-content-alignment);
                        width: 100%;
                    }
                }

                .media-content {
                    .media-wrapper {
                        gap: var(--composer-gap-sm);
                        flex: 1;

                        .media-box {
                            min-height: 200px;
                        }
                    }
                }
            }
        }
    }
}

