style(about15): fix subtitle alignment to center when images are removed and alignment is set to center

--- a/editor-components/about/about15/about15.module.scss
+++ b/editor-components/about/about15/about15.module.scss
@@ -46,10 +46,11 @@
                     text-align: var(--composer-content-alignment);
 
                     .subtitle {
-                        display: block;
+                        display: inline-block;
                         width: fit-content;
-                        margin-left: 0 !important;
-                        text-align: left !important;
+                        margin-left: auto !important;
+                        margin-right: auto !important;
+                        text-align: inherit !important;
                     }
 
                     .title,
